[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/assets/images/character_border.png" type="Texture" id=1]
[ext_resource path="res://src/assets/images/blank_character_portrait.png" type="Texture" id=2]
[ext_resource path="res://src/assets/images/arrow_continue_pressed.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/DialogueRoot.gd" type="Script" id=4]
[ext_resource path="res://src/assets/images/arrow_continue.png" type="Texture" id=5]
[ext_resource path="res://src/scenes/fonts/narrow_40_outline1.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/assets/sounds/voice (1).mp3" type="AudioStream" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="Gradient" id=2]

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )
width = 350
height = 350
fill = 1

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Theme" id=5]
default_font = ExtResource( 6 )

[node name="DialogueRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelDialogue" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -360.0
margin_right = 1920.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBorder" type="Sprite" parent="."]
position = Vector2( 0, 1070 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -350 )

[node name="CharacterBackground" type="TextureRect" parent="CharacterBorder"]
show_behind_parent = true
margin_top = -350.0
margin_right = 350.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterDialogue" type="AnimatedSprite" parent="CharacterBorder"]
show_behind_parent = true
position = Vector2( 0, -1 )
frames = SubResource( 4 )
centered = false
offset = Vector2( 0, -350 )

[node name="CharacterName" type="Label" parent="CharacterBorder"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.519
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -407.0
margin_right = -5.64999
margin_bottom = -381.0
rect_scale = Vector2( 2, 2 )
text = "CHARACTER NAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NamePanel" type="Panel" parent="CharacterBorder/CharacterName"]
modulate = Color( 1, 1, 1, 0.768627 )
show_behind_parent = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -32.0
margin_right = 171.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextDialogue" type="RichTextLabel" parent="."]
margin_left = 370.0
margin_top = 740.0
margin_right = 1898.0
margin_bottom = 1056.0
theme = SubResource( 5 )
visible_characters = 0
percent_visible = 0.0
text = "This is some text and it's very nice to look at and it means something."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextDialogue2" type="RichTextLabel" parent="."]
margin_left = 370.0
margin_top = 740.0
margin_right = 1898.0
margin_bottom = 1056.0
theme = SubResource( 5 )
visible_characters = 0
percent_visible = 0.0
text = "There are some who say that they believe in the one who is broken. That is only half the story. Bricks are delicious."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNext" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -95.0
margin_right = -15.0
margin_bottom = -15.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1196, 784 )
stream = ExtResource( 7 )
volume_db = 17.623
pitch_scale = 0.8
max_distance = 10000.0

[connection signal="pressed" from="ButtonNext" to="." method="_on_ButtonNext_pressed"]
